--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "xzl-blogs",
+  "name": "xzlgh",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "dev": "vuepress dev docs --no-cache",
+    "build": "vuepress build docs --no-cache"
   },
   "author": "",
   "license": "ISC",
